more PHP 4 support. Sorry to CentOS 4 users! PHP 5.3 was an option, but that's also been end-of-life for several years now,
and makes using current development tools (like phpunit) more difficult.

1.0.0
    Special thanks to arjanoosting, YATV and hawson for code contributions on github, and especially
    Martin (malgoe) for working on Vagrant and documentation to enable other contributors!

    CHANGE - Various performance improvements (thanks to ikorzha758 for lots of feedback back in 2014)
             For my test case, I got from 2.5 seconds to 0.6 seconds to render a set of maps - 5x speedup!
    CHANGE - Replaced entire configuration parser (part of performance changes)
    CHANGE - dsstats data plugin can skip looking up additional Cacti data by setting dsstats_no_cacti_extras
    CHANGE - rrdtool data plugin can skip looking up additional Cacti data by setting rrdtool_no_cacti_extras
    CHANGE - Moved all database access to use PDO, to avoid PHP 7.0 issues.
    CHANGE - LOTS of internal changes mostly pulled over from refactoring project:
             * New Target, ConfigReader, Colour and Scale classes
             * New Manager class handles all database access for Cacti plugin
             * Data picker is rewritten
             * Rewritten drawing code for links and nodes
             * Everything uses PHP namespaces now, and standards for format, naming and layout.
    CHANGE - Internationalization support - first translations are by me with Google Translate, so corrections are welcome!
    CHANGE - Totally rewritten editor. I know it looks the same, but the guts is entirely new.
    CHANGE - Lots more testing. New editor can be automatically tested. Lots of tests for rest of code.
    FIXED - PHP 5.3 bug introduced in command-line tool in 0.98
    FIXED - RRDtool 1.5 blank line issue
    FIXED - external-script datasource cleans up line endings properly
    ADDED - SNMPv2c and SNMPv3 datasource plugins