@@ -3,15 +3,16 @@
 FONTDEFINE 100 docs/example/Vera.ttf 10
 
 
-TITLE Simple Map
-WIDTH 1024
-HEIGHT 768
-BACKGROUND images/background1_950x625_197.jpg
+TITLE Simple Map 3
+WIDTH 950
+HEIGHT 625
+BACKGROUND images/uk1024.png
 HTMLSTYLE overlib
 KEYFONT 5
-HTMLOUTPUTFILE simple.html
-IMAGEOUTPUTFILE simple.png
-TIMEPOS 746 17 Created: %b %d %Y %H:%M:%S
+HTMLOUTPUTFILE simple2.html
+IMAGEOUTPUTFILE simple2.png
+TIMEPOS 449 25 Made: %b %d %Y %H:%M:%S
+TITLEPOS 519 463
 
 KEYTEXTCOLOR 0 0 0
 KEYOUTLINECOLOR 0 0 0
@@ -32,7 +33,7 @@ TIMECOLOR 0 0 0
 	SCALE DEFAULT 85   100    255 0 0   
 
 # All settings for legend DEFAULT
-	KEYPOS DEFAULT 38 37 Traffic Load
+	KEYPOS DEFAULT 38 37 Traffic Loads
 
 
 
@@ -55,7 +56,7 @@ NODE node1
 NODE node2
 	LABEL Node 2
 	ICON images/WorkgroupSwitch.png
-	POSITION 258 265
+	POSITION 176 336
 
 NODE node3
 	LABEL Node 3
